tests/invalid/tokenizer/unterminated_multiline_comment.err.out
tests/invalid/tokenizer/unterminated_multiline_comment.err.ri:2:1: error: unterminated multiline comment
      | 
    2 | unterminated multiline comment :(
      | ^                                
error: could not compile `unterminated_multiline_comment` module, aborting due to previous error